[project]
name = "fastapi-practice"
version = "0.1.0"
description = "FastAPI Practice"
authors = [{ name = "Nhat Tai NGUYEN", email = "nhattai.nguyen88@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry
[tool.poetry]
packages = [
    { include = "fastapi_practice" },
    { include = "fastapi_practice/**/*.py" },
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pre-commit = "^4.1.0"
pylint = "^3.3.5"
isort = "^6.0.1"
black = "^25.1.0"

# Ruff
[tool.ruff]
line-length = 88
exclude = [".git", ".venv"]
target-version = "py312"

[tool.ruff.lint]
ignore = []

# Pylint
[tool.pylint.MAIN]
ignore = [".venv"]

[tool.pylint."messages control"]
disable = ["useless-import-alias"]

# isort
[tool.isort]
skip = ["__init__.py"]
